@@ -45,8 +45,10 @@ class SuppressWarningsTest extends ApexParserTestBase {
 
     @Test
     void testClassLevelSuppression() {
-        assertNoWarningsWithFoo("@SuppressWarnings('PMD')\n"
-                                    + "public class Foo {}");
+        assertNoWarningsWithFoo("""
+                                    @SuppressWarnings('PMD')
+                                    public class Foo {}\
+                                    """);
     }
 
     private void assertNoWarningsWithFoo(String code) {
@@ -55,104 +57,124 @@ class SuppressWarningsTest extends ApexParserTestBase {
 
     @Test
     void testClassLevelSuppression2() {
-        assertNoWarningsWithFoo("@SuppressWarnings('PMD')\n"
-            + "public class Foo {" + "\n"
-            + " void bar() {\n"
-            + "  Integer foo;\n"
-            + " }\n"
-            + "}");
+        assertNoWarningsWithFoo("""
+            @SuppressWarnings('PMD')
+            public class Foo {
+             void bar() {
+              Integer foo;
+             }
+            }\
+            """);
     }
 
     @Test
     void testInheritedSuppression() {
-        assertNoWarningsWithFoo("public class Baz {\n"
-            + " @SuppressWarnings('PMD')" + "\n"
-            + " public class Bar {\n"
-            + "  void bar() {\n"
-            + "   Integer foo;\n"
-            + "  }" + "\n"
-            + " }\n"
-            + "}");
+        assertNoWarningsWithFoo("""
+            public class Baz {
+             @SuppressWarnings('PMD')
+             public class Bar {
+              void bar() {
+               Integer foo;
+              }
+             }
+            }\
+            """);
     }
 
     @Test
     void testMethodLevelSuppression() {
-        assertWarningsWithFoo(1, "public class Foo {\n"
-            + " @SuppressWarnings('PMD')\n"
-            + " void bar() {\n"
-            + "  Integer foo;\n"
-            + " }\n"
-            + "}");
+        assertWarningsWithFoo(1, """
+            public class Foo {
+             @SuppressWarnings('PMD')
+             void bar() {
+              Integer foo;
+             }
+            }\
+            """);
     }
 
     @Test
     void testConstructorLevelSuppression() {
-        assertNoWarningsWithFoo("public class Bar {\n"
-            + " @SuppressWarnings('PMD')" + "\n"
-            + " public Bar() {\n"
-            + "  Integer foo;\n"
-            + " }\n"
-            + "}");
+        assertNoWarningsWithFoo("""
+            public class Bar {
+             @SuppressWarnings('PMD')
+             public Bar() {
+              Integer foo;
+             }
+            }\
+            """);
     }
 
     @Test
     void testFieldLevelSuppression() {
-        assertWarningsWithFoo(1, "public class Bar {\n"
-            + " @SuppressWarnings('PMD')" + "\n"
-            + " Integer foo;\n"
-            + " void bar() {\n"
-            + "  Integer foo;\n"
-            + " }\n"
-            + "}");
+        assertWarningsWithFoo(1, """
+            public class Bar {
+             @SuppressWarnings('PMD')
+             Integer foo;
+             void bar() {
+              Integer foo;
+             }
+            }\
+            """);
     }
 
     @Test
     void testParameterLevelSuppression() {
-        assertWarningsWithFoo(1, "public class Bar {\n"
-            + " Integer foo;" + "\n"
-            + " void bar(@SuppressWarnings('PMD') Integer foo) {}\n"
-            + "}");
+        assertWarningsWithFoo(1, """
+            public class Bar {
+             Integer foo;
+             void bar(@SuppressWarnings('PMD') Integer foo) {}
+            }\
+            """);
     }
 
     @Test
     void testLocalVariableLevelSuppression() {
-        assertWarningsWithFoo(1, "public class Bar {\n"
-            + " Integer foo;\n"
-            + " void bar() {"
-            + "\n" + "  @SuppressWarnings('PMD') Integer foo;\n"
-            + " }\n"
-            + "}");
+        assertWarningsWithFoo(1, """
+            public class Bar {
+             Integer foo;
+             void bar() {
+              @SuppressWarnings('PMD') Integer foo;
+             }
+            }\
+            """);
     }
 
     @Test
     void testSpecificSuppression() {
-        assertWarningsWithFoo(1, "public class Bar {\n"
-            + " Integer foo;\n"
-            + " void bar() {"
-            + "\n" + "  @SuppressWarnings('PMD.NoFoo') Integer foo;\n"
-            + " }\n"
-            + "}");
+        assertWarningsWithFoo(1, """
+            public class Bar {
+             Integer foo;
+             void bar() {
+              @SuppressWarnings('PMD.NoFoo') Integer foo;
+             }
+            }\
+            """);
     }
 
     @Test
     void testSpecificSuppressionMulitpleValues() {
-        assertNoWarningsWithFoo("@SuppressWarnings('PMD.NoFoo, PMD.NoBar')"
-            + "\n" + "public class Bar {\n"
-            + " Integer foo;\n"
-            + " void bar() {" + "\n"
-            + "  Integer foo;\n"
-            + " }\n"
-            + "}");
+        assertNoWarningsWithFoo("""
+            @SuppressWarnings('PMD.NoFoo, PMD.NoBar')
+            public class Bar {
+             Integer foo;
+             void bar() {
+              Integer foo;
+             }
+            }\
+            """);
     }
 
     @Test
     void testNoSuppressionBlank() {
-        assertWarningsWithFoo(2, "public class Bar {\n"
-            + " Integer foo;\n"
-            + " void bar() {"
-            + "\n" + "  @SuppressWarnings('') Integer foo;\n"
-            + " }\n"
-            + "}");
+        assertWarningsWithFoo(2, """
+            public class Bar {
+             Integer foo;
+             void bar() {
+              @SuppressWarnings('') Integer foo;
+             }
+            }\
+            """);
     }
 
     private void assertWarningsWithFoo(int size, String code) {
@@ -162,47 +184,57 @@ class SuppressWarningsTest extends ApexParserTestBase {
 
     @Test
     void testNoSuppressionSomethingElseS() {
-        assertWarningsWithFoo(2, "public class Bar {\n"
-            + " Integer foo;\n"
-            + " void bar() {"
-            + "\n" + "  @SuppressWarnings('SomethingElse') Integer foo;\n"
-            + " }\n"
-            + "}");
+        assertWarningsWithFoo(2, """
+            public class Bar {
+             Integer foo;
+             void bar() {
+              @SuppressWarnings('SomethingElse') Integer foo;
+             }
+            }\
+            """);
     }
 
     @Test
     void testSuppressAll() {
-        assertNoWarningsWithFoo("public class Bar {\n"
-            + " @SuppressWarnings('all') Integer foo;"
-            + "\n" + "}");
+        assertNoWarningsWithFoo("""
+            public class Bar {
+             @SuppressWarnings('all') Integer foo;
+            }\
+            """);
     }
 
     @Test
     void testSpecificSuppressionAtTopLevel() {
-        Report rpt = apex.executeRule(new BarRule(), "@SuppressWarnings('PMD.NoBar')\n"
-            + "public class Bar {" + "\n"
-            + "}");
+        Report rpt = apex.executeRule(new BarRule(), """
+            @SuppressWarnings('PMD.NoBar')
+            public class Bar {
+            }\
+            """);
         assertSize(rpt, 0);
     }
 
     @Test
     void testCommentSuppression() {
-        Report rpt = apex.executeRule(new FooRule(), "public class Bar {\n"
-            + "Integer foo; // NOPMD\n"
-            + "}");
+        Report rpt = apex.executeRule(new FooRule(), """
+            public class Bar {
+            Integer foo; // NOPMD
+            }\
+            """);
         assertSize(rpt, 0);
         assertSuppressed(rpt, 1);
     }
 
     @Test
     void testMessageWithCommentSuppression() {
-        Report rpt = apex.executeRule(new FooRule(), "public class Bar {\n"
-            + "Integer foo; //NOPMD We allow foo here\n"
-            + "}");
+        Report rpt = apex.executeRule(new FooRule(), """
+            public class Bar {
+            Integer foo; //NOPMD We allow foo here
+            }\
+            """);
         assertSize(rpt, 0);
 
         List<Report.SuppressedViolation> suppressions = assertSuppressed(rpt, 1);
-        Report.SuppressedViolation suppression = suppressions.get(0);
+        Report.SuppressedViolation suppression = suppressions.getFirst();
 
         assertEquals(ViolationSuppressor.NOPMD_COMMENT_SUPPRESSOR, suppression.getSuppressor());
         assertEquals("We allow foo here", suppression.getUserMessage());
