@@ -42,7 +42,7 @@ public class SidebarGenerator {
     @SuppressWarnings("unchecked")
     private Map<String, Object> extractRuleReference(Map<String, Object> sidebar) {
         List<Map<String, Object>> entries = (List<Map<String, Object>>) sidebar.get("entries");
-        Map<String, Object> entry = entries.get(0);
+        Map<String, Object> entry = entries.getFirst();
         List<Map<String, Object>> folders = (List<Map<String, Object>>) entry.get("folders");
         return folders.get(3);
     }
