@@ -17,16 +17,18 @@ class ASTClassTypeTest extends BaseParserTest {
     @Test
     void testGithub4990() {
         ASTCompilationUnit acu = java.parse(
-            "import java.util.*;\n"
-                + "\n"
-                + "public class Test {\n"
-                + "  public void Test() {\n"
-                + "    boolean good4 = java.util.Collections.emptyList();  // Line 6\n"
-                + "  }\n"
-                + "}");
+            """
+            import java.util.*;
+            
+            public class Test {
+              public void Test() {
+                boolean good4 = java.util.Collections.emptyList();  // Line 6
+              }
+            }\
+            """);
         List<ASTClassType> types = acu.descendants(ASTClassType.class).toList();
 
-        ASTClassType ct = types.get(0);
+        ASTClassType ct = types.getFirst();
         assertEquals("Collections", ct.getSimpleName());
         assertEquals("java.util", ct.getPackageQualifier());
 
